feat(device) detect brand Panasonic models: P55 Max, P6 feat(device) detect brand Coolpad model: Cool 5 (1826-I01) feat(device) detect brand Karbonn model: K9 Smart Plus feat(device) detect brand IKU Mobile models: K3, T2, T1 feat(device) detect brand Singtech models: Infinity I1, Infinity I Mix feat(device) detect brand Timovi models: Infinit X Cam, Infinit MX, Infinit MX Pro, Infinit Lite 2 feat(device) detect brand Telenor models: Infinity e4, Infinity e3, Infinity e2, Infinity a2, Infinity k2

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -4339,7 +4339,7 @@ Condor:
 
 # Coolpad
 Coolpad:
-  regex: '(?:YL-)?Coolpad|(?:Cool_9S|1824-S0|8190Q|1831-A0|8676-[AM]01|CP8298_I00|CP3648A|CP8676_I0[23]|REVVLPLUS C3701A|VCR-[AI]0|C105-E0|C106-[79]| C106|MTS-T0|cp3705A[S]?|ORL-C0|DLS-E0|8298-(?:M02|A01)|5560S)(?:[);/ ]|$)|(8295|5860S) Build'
+  regex: '(?:YL-)?Coolpad|(?:Cool_9S|1824-S0|8190Q|1831-A0|8676-[AM]01|CP8298_I00|CP3648A|CP8676_I0[23]|REVVLPLUS C3701A|VCR-[AI]0|C105-E0|C106-[79]| C106|MTS-T0|cp3705A[S]?|ORL-C0|DLS-E0|1826-I01|8298-(?:M02|A01)|5560S)(?:[);/ ]|$)|(8295|5860S) Build'
   device: 'smartphone'
   models:
     - regex: 'VCR-[AI]0'
@@ -4365,6 +4365,8 @@ Coolpad:
       model: 'Cool 1'
     - regex: 'C105-E0(?:[);/ ]|$)'
       model: 'Cool S1'
+    - regex: '1826-I01(?:[);/ ]|$)'
+      model: 'Cool 5'
     - regex: 'ORL-C0(?:[);/ ]|$)'
       model: 'Cool 9'
     - regex: 'Cool_9S(?:[);/ ]|$)'
@@ -10040,7 +10042,7 @@ Konrow:
 
 # Karbonn (karbonnmobiles.com)
 Karbonn:
-  regex: '(?:Browser-)?Karbonn|K9 Kavach 4G|K9[_ ]Viraat[_ ]Plus|K9 Music 4G|K9 Smart|K9 VIRAAT 4G|Aura (?:Sleek Plus|Power 4G Plus|Note Play)|Titanium[ _](?:3D-Plex|Octane Plus|Vista 4G|Jumbo|S360|S1[059]|S35|S20[13]|S22|S[15]|S200 HD|Frames S7|MOGHUL|S9)|K-lite F3|Sparkle V|Alfa A114 Quad|Quattro[ _]L(?:45|5[025])[ _](?:HD|IPS|VR)'
+  regex: '(?:Browser-)?Karbonn|K9 Kavach 4G|K9[_ ](?:Viraat|Smart)[_ ]Plus|K9 Music 4G|K9 Smart|K9 VIRAAT 4G|Aura (?:Sleek Plus|Power 4G Plus|Note Play)|Titanium[ _](?:3D-Plex|Octane Plus|Vista 4G|Jumbo|S360|S1[059]|S35|S20[13]|S22|S[15]|S200 HD|Frames S7|MOGHUL|S9)|K-lite F3|Sparkle V|Alfa A114 Quad|Quattro[ _]L(?:45|5[025])[ _](?:HD|IPS|VR)'
   device: 'smartphone'
   models:
     - regex: 'K9 Kavach 4G'
@@ -10055,6 +10057,8 @@ Karbonn:
       model: 'K9 Smart Grand'
     - regex: 'K9 Smart Yuva'
       model: 'K9 Smart Yuva'
+    - regex: 'K9[_ ]Smart[_ ]Plus'
+      model: 'K9 Smart Plus'
     - regex: 'K9 Smart'
       model: 'K9 Smart'
     - regex: 'K9[_ ]Viraat[_ ]Plus'
@@ -12482,7 +12486,7 @@ Panacom:
 
 # panasonic
 Panasonic:
-  regex: 'Panasonic|PANATV[0-9]+|Viera/|(?:P902i|P-0[28]D|FZ-B2D|FZ-[NX]1|DMC-CM1|P-01J|P-03E)(?:[);/ ]|$)|Eluga[ _]|P55 Novo 4G'
+  regex: 'Panasonic|PANATV[0-9]+|Viera/|(?:P902i|P-0[28]D|FZ-B2D|FZ-[NX]1|DMC-CM1|P-01J|P-03E|P55 Max)(?:[);/ ]|$)|Eluga[ _]|P55 Novo 4G'
   device: 'smartphone'
   models:
     - regex: 'P-01J(?:[);/ ]|$)'
@@ -12505,6 +12509,8 @@ Panasonic:
       device: 'tablet'
     - regex: 'P55 Novo 4G'
       model: 'P55 Novo 4G'
+    - regex: 'P55 Max'
+      model: 'P55 Max'
     - regex: 'P902i(?:[);/ ]|$)'
       device: 'feature phone'
       model: 'P902i'
@@ -15706,12 +15712,12 @@ Telego:
 
 # Telenor
 Telenor:
-  regex: '(?<!FBCR/)Telenor|(?:Infinity[_ ](?:E5|K))(?:[);/ ]|$)'
+  regex: '(?<!FBCR/)Telenor|(?:Infinity[_ ](?:E[2-5]|K2?|A2))(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Telenor[ _]([^;/]+)(?: Build|[;)])'
       model: '$1'
-    - regex: 'Infinity[ _](E5|K)'
+    - regex: 'Infinity[ _](E[2-5]|K2?|A2)'
       model: 'Infinity $1'
 
 # Telit
@@ -15748,7 +15754,7 @@ TIANYU:
 
 # Timovi
 Timovi:
-  regex: 'Tmovi[ _]|(?:Infinit_Lite_2|Vision_PRO|VISION ULTRA|Epix)(?:[);/ ]|$)'
+  regex: 'Tmovi[ _]|(?:Infinit[ _](?:Lite[_ ]2|X[_ ]CAM)|Infinit MX(?: Pro)?|Vision_PRO|VISION ULTRA|Epix)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Tmovi[ _]Prime'
@@ -15757,10 +15763,14 @@ Timovi:
       model: 'Yeah Beat'
     - regex: 'YeahLIVE'
       model: 'Yeah LIVE'
-    - regex: 'Infinit Lite'
-      model: 'Infinit Lite'
-    - regex: 'Infinit_Lite_2'
-      model: 'Infinit Lite 2'
+    - regex: 'Infinit[_ ]X[_ ]CAM'
+      model: 'Infinit X Cam'
+    - regex: 'Infinit MX Pro'
+      model: 'Infinit MX Pro'
+    - regex: 'Infinit MX'
+      model: 'Infinit MX'
+    - regex: 'Infinit[_ ]Lite([_ ]2)?'
+      model: 'Infinit Lite$1'
     - regex: 'Vision_PRO'
       model: 'Vision Pro'
     - regex: 'VISION ULTRA'
@@ -21470,9 +21480,14 @@ Pluzz:
 
 # IKU Mobile (iku-mobile.com)
 'IKU Mobile':
-  regex: '(Powerful_K55i|Curvy C50L)(?:[);/ ]|$)'
+  regex: '(?:IKU[_ ](?:T[12]|K3)|Powerful_K55i|Curvy C50L)(?:[);/ ]|$)'
   device: 'smartphone'
-  model: '$1'
+  models:
+    - regex: '(?:IKU[_ ])?(K3|Powerful_K55i|Curvy C50L)(?:[);/ ]|$)'
+      model: '$1'
+    - regex: 'IKU (T[12])(?:[);/ ]|$)'
+      device: 'tablet'
+      model: '$1'
 
 # IKI Mobile (ikimobile.com)
 IKI Mobile:
@@ -22268,13 +22283,17 @@ OINOM:
 
 # Singtech (singtech.asia)
 Singtech:
-  regex: 'Singtech|(?:Sapphire[_ ](?:H50S|H7S?|H90))(?:[);/ ]|$)'
+  regex: 'Singtech|(?:Sapphire[_ ](?:H50S|H7S?|H90)|Infinity_I(?:1|_Mix))(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Sapphire[_ ](H50S|H7S?|H90)(?:[);/ ]|$)'
       model: 'Sapphire $1'
     - regex: 'Singtech[ _](Q2|S1)(?:[);/ ]|$)'
       model: '$1'
+    - regex: 'Infinity_I1(?:[);/ ]|$)'
+      model: 'Infinity I1'
+    - regex: 'Infinity_I_Mix(?:[);/ ]|$)'
+      model: 'Infinity I Mix'
 
 # Sunny
 Sunny:
