feat(device) detect brand Roku model: Digital Video Player
issue #6764

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -12798,7 +12798,7 @@ Readboy:
 
 # Roku
 Roku:
-  regex: 'Roku/DVP'
+  regex: 'Roku/DVP|QSP; Roku'
   device: 'tv'
   model: 'Digital Video Player'
 
