feat(app) detect app Netflix

--- a/Tests/Parser/Client/fixtures/mobile_app.yml
+++ b/Tests/Parser/Client/fixtures/mobile_app.yml
@@ -575,3 +575,9 @@
     type: mobile app
     name: Odnoklassniki
     version: 6.10.2
+-
+  user_agent: com.netflix.mediaclient/35245 (Linux; U; Android 5.1.1; es_ES; KFDOWI; Build/LVY48F; Cronet/76.0.3809.111)
+  client:
+    type: mobile app
+    name: Netflix
+    version: ""
