--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -90,6 +90,11 @@
   name: 'YouTube'
   version: '$1'
 
+# Netflix (https://play.google.com/store/apps/details?id=com.netflix.mediaclient)
+- regex: 'com.netflix.mediaclient(?:/(\d+\.[\d\.]+))?'
+  name: 'Netflix'
+  version: '$1'
+
 # AFNetworking generic
 - regex: '([^/]+)/(\d+(?:\.\d+)+) \((?:iPhone|iPad); iOS [0-9\.]+; Scale/[0-9\.]+\)'
   name: '$1'
