feat(os) improved detection ios 14.6 version

--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -2015,3 +2015,9 @@
     short_name: IOS
     version: "14.4"
     platform: ""
+-
+  user_agent: MobileIron/12.11.12.6 CFNetwork/1240.0.4 Darwin/20.5.0
+  os:
+    name: iOS
+    version: "14.6"
+    platform: ""
