--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -2019,5 +2019,6 @@
   user_agent: MobileIron/12.11.12.6 CFNetwork/1240.0.4 Darwin/20.5.0
   os:
     name: iOS
+    short_name: IOS
     version: "14.6"
     platform: ""
