--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -15422,8 +15422,6 @@ Tecno Mobile:
       model: 'W3'
     - regex: 'TECNO[ _]F4 Pro(?:[);/ ]|$)'
       model: 'F4 Pro'
-    - regex: 'TECNO[ _]KE5[jk](?:[);/ ]|$)'
-      model: 'Spark 6 Go'
     - regex: 'TECNO[ _]ID6(?:[);/ ]|$)'
       model: 'Camon iClick 2'
     - regex: 'Tecno[ _]7C(?:[);/ ]|$)'
@@ -15464,6 +15462,10 @@ Tecno Mobile:
       model: 'Spark 4 Lite'
     - regex: 'Tecno[ _]KD7(?:[);/ ]|$)'
       model: 'Spark 5 Pro'
+    - regex: 'TECNO[ _]KE7(?:[);/ ]|$)'
+      model: 'Spark 6'
+    - regex: 'TECNO[ _]KE5[jk](?:[);/ ]|$)'
+      model: 'Spark 6 Go'
     - regex: 'Tecno[ _]DP8D(?:[);/ ]|$)'
       model: 'DroidPad 8D'
       device: 'tablet'
