--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -15456,6 +15456,8 @@ Tecno Mobile:
       model: 'Camon 16 S'
     - regex: 'Tecno[ _-]CG6(?:[);/ ]|$)'
       model: 'Camon 17'
+    - regex: 'TECNO[ _]LD7j?(?:[);/ ]|$)'
+      model: 'Pova'
     - regex: 'Tecno[ _](?:KC8|KC2j?)(?:[);/ ]|$)'
       model: 'Spark 4'
     - regex: 'Tecno[ _]BB4k(?:[);/ ]|$)'
