Improves detection for Tecno Mobile Camon 16

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -15446,7 +15446,7 @@ Tecno Mobile:
       model: 'Camon 12'
     - regex: 'Tecno[ _-]CD7(?:[);/ ]|$)'
       model: 'Camon 15'
-    - regex: 'Tecno[ _-]CE9h(?:[);/ ]|$)'
+    - regex: 'Tecno[ _-](?:CE7j|CE9h)(?:[);/ ]|$)'
       model: 'Camon 16'
     - regex: 'Tecno[ _-]CE9(?:[);/ ]|$)'
       model: 'Camon 16 Premier'
