Adds detection for Tecno Mobile Camon 15 Pro

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -15446,6 +15446,8 @@ Tecno Mobile:
       model: 'Camon 12'
     - regex: 'Tecno[ _-]CD7(?:[);/ ]|$)'
       model: 'Camon 15'
+    - regex: 'Tecno[ _-]CD8(?:[);/ ]|$)'
+      model: 'Camon 15 Pro'
     - regex: 'Tecno[ _-](?:CE7j|CE9h)(?:[);/ ]|$)'
       model: 'Camon 16'
     - regex: 'Tecno[ _-]CE9(?:[);/ ]|$)'
