Improves detection for Tecno Mobile Spark 6 Go

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -15470,7 +15470,7 @@ Tecno Mobile:
       model: 'Spark 5 Pro'
     - regex: 'TECNO[ _]KE7(?:[);/ ]|$)'
       model: 'Spark 6'
-    - regex: 'TECNO[ _]KE5[jk](?:[);/ ]|$)'
+    - regex: 'TECNO[ _]KE5[jk]?(?:[);/ ]|$)'
       model: 'Spark 6 Go'
     - regex: 'Tecno[ _]DP8D(?:[);/ ]|$)'
       model: 'DroidPad 8D'
