Adds detection for Tecno Mobile Spark 6 Air

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -15470,6 +15470,8 @@ Tecno Mobile:
       model: 'Spark 5 Pro'
     - regex: 'TECNO[ _]KE7(?:[);/ ]|$)'
       model: 'Spark 6'
+    - regex: 'TECNO[ _]KE6j?(?:[);/ ]|$)'
+      model: 'Spark 6 Air'
     - regex: 'TECNO[ _]KE5[jk]?(?:[);/ ]|$)'
       model: 'Spark 6 Go'
     - regex: 'Tecno[ _]DP8D(?:[);/ ]|$)'
