Sort regexes for Tecno Mobile

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -15440,10 +15440,10 @@ Tecno Mobile:
       model: 'Camon i4'
     - regex: 'Tecno[ _]CF7(?:[);/ ]|$)'
       model: 'Camon 11'
-    - regex: 'Tecno[ _]CC6(?:[);/ ]|$)'
-      model: 'Camon 12 Air'
     - regex: 'Tecno[ _]CC7(?:[);/ ]|$)'
       model: 'Camon 12'
+    - regex: 'Tecno[ _](?:CC6|KC3)(?:[);/ ]|$)'
+      model: 'Camon 12 Air'
     - regex: 'Tecno[ _-]CD7(?:[);/ ]|$)'
       model: 'Camon 15'
     - regex: 'Tecno[ _-]CD8(?:[);/ ]|$)'
@@ -15462,6 +15462,8 @@ Tecno Mobile:
       model: 'Pova'
     - regex: 'Tecno[ _](?:KC8|KC2j?)(?:[);/ ]|$)'
       model: 'Spark 4'
+    - regex: 'Tecno[ _]KC6(?:[);/ ]|$)'
+      model: 'Spark 4 Air'
     - regex: 'Tecno[ _]BB4k(?:[);/ ]|$)'
       model: 'Spark 4 Lite'
     - regex: 'Tecno[ _]KD6(?:[);/ ]|$)'
@@ -15479,10 +15481,6 @@ Tecno Mobile:
       device: 'tablet'
     - regex: 'Tecno[ _]LB8a?'
       model: 'Pouvoir 3 Plus'
-    - regex: 'Tecno[ _]KC3(?:[);/ ]|$)'
-      model: 'Camon 12 Air'
-    - regex: 'Tecno[ _]KC6(?:[);/ ]|$)'
-      model: 'Spark 4 Air'
     - regex: 'Tecno[ _-]J8(?:[);/ ]|$)'
       model: 'Boom J8'
     - regex: 'TECNO S9'
