Adds detection for Tecno Mobile Camon iSky

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -15424,6 +15424,8 @@ Tecno Mobile:
       model: 'F4 Pro'
     - regex: 'TECNO[ _]ID6(?:[);/ ]|$)'
       model: 'Camon iClick 2'
+    - regex: 'TECNO[ _]IN2(?:[);/ ]|$)'
+      model: 'Camon iSky'
     - regex: 'Tecno[ _]7C(?:[);/ ]|$)'
       model: 'DroidPad 7C'
       device: 'tablet'
