Adds detection for Kodak Seren KD50

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -8590,11 +8590,13 @@ KDDI:
 
 # Kodak
 Kodak:
-  regex: 'KODAK|(?:IM5|Ektra|Smartway_T1)(?:[);/ ]|$)'
+  regex: 'KODAK|(?:IM5|KD50|Ektra|Smartway_T1)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'IM5'
       model: 'IM5'
+    - regex: 'KD50'
+      model: 'Seren KD50'
     - regex: 'Ektra(?:[);/ ]|$)'
       model: 'Ektra'
     - regex: '(?:KODAK[_ ])?SMARTWAY[_ ]([MTX]1)'
