--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -10678,7 +10678,7 @@ Mobiola:
 
 # Mobicel or Mobicell
 Mobicel:
-  regex: 'Mobicel_(R1)|(?:HYPE|DANDY(?:_ZAM)?|(?<!SMADL )Matrix|VENUS_G|TRENDY PLUS|FENDY_DS|TANGO_LITE|BLINK|BERRY[_ ]?(?:[12]|PLUS))(?:[);/ ]|$)'
+  regex: 'Mobicel_(R1)|R7_1|(?:HYPE|DANDY(?:_ZAM)?|(?<!SMADL )Matrix|VENUS_G|TRENDY PLUS|FENDY_DS|TANGO_LITE|BLINK|BERRY[_ ]?(?:[12]|PLUS))(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Matrix'
@@ -10705,6 +10705,8 @@ Mobicel:
       model: 'Tango Lite'
     - regex: 'FENDY_DS'
       model: 'Fendy DS'
+    - regex: 'R7_1'
+      model: 'R7'
     - regex: 'Mobicel_(R1)'
       model: '$1'
 
