--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -18,10 +18,10 @@ jobs:
             operating-system: ubuntu-latest
           - php-version: 7.4
             operating-system: ubuntu-latest
-          - php-version: 8.0.5
-            operating-system: macos-10.15
           - php-version: 7.2
-            operating-system: macos-10.15
+            operating-system: macos-latest
+          - php-version: 7.4
+            operating-system: macos-latest
     steps:
       - uses: actions/checkout@v2
       - name: Install PHP
