test(git) install spec php-version: 8.0 for macos disable jit

--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -20,8 +20,9 @@ jobs:
             operating-system: ubuntu-latest
           - php-version: 7.2
             operating-system: macos-latest
-          - php-version: 7.4
+          - php-version: 8.0
             operating-system: macos-latest
+            ini-values: pcre.jit=0
     steps:
       - uses: actions/checkout@v2
       - name: Install PHP
