--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -11,17 +11,13 @@ jobs:
     runs-on: ${{ matrix.operating-system }}
     strategy:
       matrix:
-        operating-system: [ubuntu-latest, windows-latest]
+        operating-system: [ubuntu-latest, windows-latest, macos-latest]
         php-version: ['7.2', '8.0']
         include:
           - php-version: 7.3
             operating-system: ubuntu-latest
           - php-version: 7.4
             operating-system: ubuntu-latest
-          - php-version: 7.2
-            operating-system: macos-latest
-          - php-version: 8.0
-            operating-system: macos-latest
     steps:
       - uses: actions/checkout@v2
       - name: Install PHP
@@ -30,12 +26,17 @@ jobs:
           php-version: ${{ matrix.php-version }}
           tools: composer:v2
           extensions: memcached
-          ini-values: pcre.jit=0
       - name: "Composer install"
         run: |
           composer install --ignore-platform-reqs
           composer require doctrine/cache ~1.2 --ignore-platform-reqs
       - name: PHPUnit / PHP ${{ matrix.php-version }}
+          if: matrix.os == 'macos-latest'
+          run: |
+            php -v -d pcre.jit=0
+            ./vendor/bin/phpunit
+      - name: PHPUnit / PHP ${{ matrix.php-version }}
+        if: matrix.os != 'macos-latest'
         run: |
           php -v
           ./vendor/bin/phpunit
