--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -20,22 +20,26 @@ jobs:
             operating-system: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Install PHP
+      - name: Install PHP (Ubuntu, Windows)
+          if: runner.os != 'macOS'
+          uses: shivammathur/setup-php@v2
+          with:
+            php-version: ${{ matrix.php-version }}
+            tools: composer:v2
+            extensions: memcached
+      - name: Install PHP (Mac)
+        if: runner.os == 'macOS'
         uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php-version }}
           tools: composer:v2
           extensions: memcached
+          ini-values: pcre.jit=0
       - name: "Composer install"
         run: |
           composer install --ignore-platform-reqs
           composer require doctrine/cache ~1.2 --ignore-platform-reqs
-      - name: PHPUnit / PHP ${{ matrix.php-version }} / ${{ runner.os }}
-        if: runner.os == 'macOS'
-        run: |
-          php -v -d pcre.jit=0
-          ./vendor/bin/phpunit
-      - name: PHPUnit / PHP ${{ matrix.php-version }} / ${{ runner.os }}
+      - name: PHPUnit / PHP ${{ matrix.php-version }}
         if: runner.os != 'macOS'
         run: |
           php -v
