fix(git-action) fixed the task names as they were

--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build:
-    name: PHPUnit (Ubuntu, Windows)
+    name: PHPUnit
     runs-on: ${{ matrix.operating-system }}
     strategy:
       matrix:
@@ -36,7 +36,7 @@ jobs:
           ./vendor/bin/phpunit
 
   build2:
-    name: PHPUnit  (Mac)
+    name: PHPUnit
     runs-on: ${{ matrix.operating-system }}
     strategy:
       matrix:
