--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -40,7 +40,7 @@ jobs:
     runs-on: ${{ matrix.operating-system }}
     strategy:
       matrix:
-        operating-system: [macos-latest]
+        operating-system: [macOS-latest]
         php-version: [ '7.2', '8.0' ]
     steps:
       - uses: actions/checkout@v2
