--- a/Tests/fixtures/tv-1.yml
+++ b/Tests/fixtures/tv-1.yml
@@ -359,3 +359,23 @@
     model: Dream Player TV
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (QSP; Roku; AP; 6.2.80.2752)
+  os: [ ]
+  client: null
+  device:
+    type: tv
+    brand: Roku
+    model: Digital Video Player
+  os_family: Unknown
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (QSP; Roku; UI; 5.3.0.49)
+  os: [ ]
+  client: null
+  device:
+    type: tv
+    brand: Roku
+    model: Digital Video Player
+  os_family: Unknown
+  browser_family: Unknown
