--- a/Tests/fixtures/smartphone-15.yml
+++ b/Tests/fixtures/smartphone-15.yml
@@ -9156,7 +9156,7 @@
   device:
     type: smartphone
     brand: Tecno Mobile
-    model: Camon 16
+    model: Camon 16 SE
   os_family: Android
   browser_family: Chrome
 - 
