--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -15454,7 +15454,7 @@ Tecno Mobile:
       model: 'Camon 15'
     - regex: 'Tecno[ _-]CD8(?:[);/ ]|$)'
       model: 'Camon 15 Pro'
-    - regex: 'Tecno[ _-](?:CE7j|CE9h)(?:[);/ ]|$)'
+    - regex: 'Tecno[ _-]CE9h(?:[);/ ]|$)'
       model: 'Camon 16'
     - regex: 'Tecno[ _-]CE9(?:[);/ ]|$)'
       model: 'Camon 16 Premier'
@@ -15462,6 +15462,8 @@ Tecno Mobile:
       model: 'Camon 16 Pro'
     - regex: 'Tecno[ _-]CD6j(?:[);/ ]|$)'
       model: 'Camon 16 S'
+    - regex: 'Tecno[ _-]CE7j(?:[);/ ]|$)'
+      model: 'Camon 16 SE'
     - regex: 'Tecno[ _-]CG6(?:[);/ ]|$)'
       model: 'Camon 17'
     - regex: 'TECNO[ _]LD7j?(?:[);/ ]|$)'
