--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -16080,7 +16080,7 @@ UTOK:
   device: 'smartphone'
   model: '$1'
 
-# Vasting
+# Vastking
 Vastking:
   regex: '(?:M910A|M783K|M783K-16G|M1072R-3G|KingPad_K10(?:Pro)?)(?:[);/ ]|$)'
   device: 'tablet'
