Adds detection for CensysInspect bot

--- a/Tests/fixtures/bots.yml
+++ b/Tests/fixtures/bots.yml
@@ -4204,3 +4204,12 @@
     producer:
         name: NET SYSTEMS RESEARCH LLC
         url: https://www.netsystemsresearch.com/
+-
+  user_agent: 'Mozilla/5.0 (compatible; CensysInspect/1.1;  https://about.censys.io/)'
+  bot:
+    name: CensysInspect
+    category: Security Checker
+    url: https://about.censys.io/
+    producer:
+        name: Censys, Inc.
+        url: https://censys.io/
