--- a/regexes/bots.yml
+++ b/regexes/bots.yml
@@ -2431,6 +2431,14 @@
     name: 'NET SYSTEMS RESEARCH LLC'
     url: 'https://www.netsystemsresearch.com/'
 
+- regex: 'CensysInspect/([\d+\.])'
+  name: 'CensysInspect'
+  category: 'Security Checker'
+  url: 'https://about.censys.io/'
+  producer:
+    name: 'Censys, Inc.'
+    url: 'https://censys.io/'
+
 # Generic detections
 
 - regex: '[a-z0-9\-_]*((?<!cu|power[ _]|m[ _])bot(?![ _]TAB|[ _]?5[0-9])|crawler|crawl|checker|archiver|transcoder|spider)([^a-z]|$)'
