Adds detection for GDNP bot

--- a/Tests/fixtures/bots.yml
+++ b/Tests/fixtures/bots.yml
@@ -4213,3 +4213,12 @@
     producer:
         name: Censys, Inc.
         url: https://censys.io/
+-
+  user_agent: https://gdnplus.com:Gather Analyze Provide.
+  bot:
+    name: GDNP
+    category: Crawler
+    url: https://gdnplus.com/
+    producer:
+        name: Global Digital Network Plus, LLC
+        url: https://gdnplus.com/
