Adds detection for various bots (#6773)
* Adds detection for NetSystemsResearch bot

* Adds detection for CensysInspect bot

* Adds detection for GDNP bot

Co-authored-by: Stefan Giehl <stefan@matomo.org>

--- a/Tests/fixtures/bots.yml
+++ b/Tests/fixtures/bots.yml
@@ -4195,3 +4195,30 @@
     producer:
         name: Cybot A/S
         url: https://www.cybot.com/
+-
+  user_agent: NetSystemsResearch studies the availability of various services across the internet. Our website is netsystemsresearch.com
+  bot:
+    name: NetSystemsResearch
+    category: Security Checker
+    url: https://www.netsystemsresearch.com/
+    producer:
+        name: NET SYSTEMS RESEARCH LLC
+        url: https://www.netsystemsresearch.com/
+-
+  user_agent: 'Mozilla/5.0 (compatible; CensysInspect/1.1;  https://about.censys.io/)'
+  bot:
+    name: CensysInspect
+    category: Security Checker
+    url: https://about.censys.io/
+    producer:
+        name: Censys, Inc.
+        url: https://censys.io/
+-
+  user_agent: https://gdnplus.com:Gather Analyze Provide.
+  bot:
+    name: GDNP
+    category: Crawler
+    url: https://gdnplus.com/
+    producer:
+        name: Global Digital Network Plus, LLC
+        url: https://gdnplus.com/
