Improves detection for iOS

--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -427,6 +427,14 @@
   name: 'iOS'
   version: '$1'
 
+- regex: 'CFNetwork/.+ Darwin/21.0.0(?!.*x86_64)'
+  name: 'iOS'
+  version: '15.0'
+
+- regex: 'CFNetwork/.+ Darwin/20.6.0(?!.*x86_64)'
+  name: 'iOS'
+  version: '14.7'
+
 - regex: 'CFNetwork/.+ Darwin/20.5.0(?!.*x86_64)'
   name: 'iOS'
   version: '14.6'
