feat(device) improved habbtv parser added brand detection by mask <brand> shell <motherboard code> feat(device) detect brand Leagoo model: Z5c feat(device) detect new tv brands: AMCV, ECON, Erisson, Leben, Novex, Starwind

--- a/regexes/device/televisions.yml
+++ b/regexes/device/televisions.yml
@@ -5,6 +5,7 @@
 # @license http://www.gnu.org/licenses/lgpl.html LGPL v3 or later
 #
 #  ATTENTION: This file may only include tv user agents that contain 'HbbTV/([1-9]{1}(\.[0-9]{1}){1,2})'
+#  OR '[a-z]+[ _]Shell[ _]\w{6}'
 #
 ###############
 
@@ -254,11 +255,14 @@ Inverto:
 
 # JVC
 JVC:
-  regex: 'AFTSO001|JVC[;,]'
+  regex: 'AFTSO001|JVC[;,]|JVC Shell'
   device: 'tv'
   models:
     - regex: 'AFTSO001'
       model: '4K (2019)'
+    # shell m-board
+    - regex: 'JVC Shell [0-9A-Z]+'
+      model: ''
 
 # Kalley
 Kalley:
@@ -697,5 +701,77 @@ X.Vision:
 # Vestel
 Vestel:
   regex: '(?:Vestel.+VESTEL|VESTEL;)'
+  device: 'tv'
+  model: ''
+
+# Leff
+Leff:
+  # shell m-board
+  regex: 'Leff Shell'
+  device: 'tv'
+  model: ''
+
+# Leben
+Leben:
+  # shell m-board
+  regex: 'Leben Shell'
+  device: 'tv'
+  model: ''
+
+# Lumus
+Lumus:
+  # shell m-board
+  regex: 'LUMUS Shell'
+  device: 'tv'
+  model: ''
+
+# Erisson
+Erisson:
+  # shell m-board
+  regex: 'Erisson[_ ]Shell'
+  device: 'tv'
+  model: ''
+
+# BBK
+BBK:
+  # shell m-board
+  regex: 'BBK shell'
+  device: 'tv'
+  model: ''
+
+# Novex
+Novex:
+  # shell m-board
+  regex: 'Novex shell'
+  device: 'tv'
+  model: ''
+
+# Digma
+Digma:
+  regex: 'Digma Shell'
+  device: 'tv'
+  model: ''
+
+# AMCV
+AMCV:
+  regex: 'AMCV Shell'
+  device: 'tv'
+  model: ''
+
+# Mystery
+Mystery:
+  regex: 'Mystery Shell'
+  device: 'tv'
+  model: ''
+
+# ECON (econ.su)
+ECON:
+  regex: 'ECON Shell'
+  device: 'tv'
+  model: ''
+
+# Starwind (starwind.com.ru)
+Starwind:
+  regex: 'Starwind Shell'
   device: 'tv'
   model: ''
