--- a/Tests/fixtures/mobile_apps.yml
+++ b/Tests/fixtures/mobile_apps.yml
@@ -1103,8 +1103,7 @@
     model: P40 Lite
   os_family: Android
   browser_family: Unknown
-- user_agent: Mozilla/5.0 (Linux; Android 8.1.0; NEOSR620 Build/O11019; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/73.0.3683.90 Mobile Safari/537.36 Instagram 88.0.0.14.99 Android (27/8.1.0; 320dpi; 720x1404; Tesla
-  Group/LUMUS; NEOSR620; NEOSR620; mt6739; ru_RU; 149350058)
+- user_agent: Mozilla/5.0 (Linux; Android 8.1.0; NEOSR620 Build/O11019; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/73.0.3683.90 Mobile Safari/537.36 Instagram 88.0.0.14.99 Android (27/8.1.0; 320dpi; 720x1404; TeslaGroup/LUMUS; NEOSR620; NEOSR620; mt6739; ru_RU; 149350058)
   os:
     name: Android
     version: 8.1.0
