--- a/Tests/fixtures/smartphone-23.yml
+++ b/Tests/fixtures/smartphone-23.yml
@@ -5688,8 +5688,7 @@
   os_family: Android
   browser_family: Chrome
 -
-  user_agent: Mozilla/5.0 (Linux; Android 6.0; Shark 5000 Build/MRA58K; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/74.0.3729.157 Mobile Safari/537.36 Instagram 94.0.0.22.116 Android (23/6.0; 320dpi; 720x1280; LEAGOO
-  ; Shark 5000; s5033b_s561_leagoo; mt6580; ru_RU; 155374103)
+  user_agent: Mozilla/5.0 (Linux; Android 6.0; Shark 5000 Build/MRA58K; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/74.0.3729.157 Mobile Safari/537.36 Instagram 94.0.0.22.116 Android (23/6.0; 320dpi; 720x1280; LEAGOO; Shark 5000; s5033b_s561_leagoo; mt6580; ru_RU; 155374103)
   os:
     name: Android
     version: "6.0"
@@ -5705,8 +5704,7 @@
   os_family: Android
   browser_family: Unknown
 -
-  user_agent: Mozilla/5.0 (Linux; Android 5.1; S550 Pro Build/LMY47D; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/74.0.3729.157 Mobile Safari/537.36 Instagram 94.0.0.22.116 Android (22/5.1; 320dpi; 720x1280; CUBOT; S
-  550 Pro; hct6735_35gu_l1; mt6735; ru_RU; 155374103)
+  user_agent: Mozilla/5.0 (Linux; Android 5.1; S550 Pro Build/LMY47D; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/74.0.3729.157 Mobile Safari/537.36 Instagram 94.0.0.22.116 Android (22/5.1; 320dpi; 720x1280; CUBOT; S550 Pro; hct6735_35gu_l1; mt6735; ru_RU; 155374103)
   os:
     name: Android
     version: "5.1"
@@ -5722,8 +5720,7 @@
   os_family: Android
   browser_family: Unknown
 -
-  user_agent: Mozilla/5.0 (Linux; Android 5.1; S5140 Build/LMY47D) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/39.0.0.0 Mobile Safari/537.36 Instagram 86.0.0.24.87 Android (22/5.1; 320dpi; 720x1184; S5140/GINZZU; S5140;
-  S5140; mt6735; ru_RU; 147375141)
+  user_agent: Mozilla/5.0 (Linux; Android 5.1; S5140 Build/LMY47D) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/39.0.0.0 Mobile Safari/537.36 Instagram 86.0.0.24.87 Android (22/5.1; 320dpi; 720x1184; S5140/GINZZU; S5140; S5140; mt6735; ru_RU; 147375141)
   os:
     name: Android
     version: "5.1"
@@ -5739,8 +5736,7 @@
   os_family: Android
   browser_family: Unknown
 -
-  user_agent: Mozilla/5.0 (Linux; Android 5.1; S7 Build/LMY47I; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/71.0.3578.99 Mobile Safari/537.36 Instagram 88.0.0.14.99 Android (22/5.1; 240dpi; 540x960; Gooweel; S7; Goow
-  eel; mt6580; ru_RU; 149350054)
+  user_agent: Mozilla/5.0 (Linux; Android 5.1; S7 Build/LMY47I; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/71.0.3578.99 Mobile Safari/537.36 Instagram 88.0.0.14.99 Android (22/5.1; 240dpi; 540x960; Gooweel; S7; Gooweel; mt6580; ru_RU; 149350054)
   os:
     name: Android
     version: "5.1"
@@ -5756,8 +5752,7 @@
   os_family: Android
   browser_family: Unknown
 -
-  user_agent: Mozilla/5.0 (Linux; Android 5.1.1; NX529Jq Build/LMY47V; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/73.0.3683.90 Mobile Safari/537.36 Instagram 87.0.0.18.99 Android (22/5.1.1; 480dpi; 1080x1920; nubia;
-    NX529Jq; NX529Jq; qcom; ru_RU; 148324051)
+  user_agent: Mozilla/5.0 (Linux; Android 5.1.1; NX529Jq Build/LMY47V; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/73.0.3683.90 Mobile Safari/537.36 Instagram 87.0.0.18.99 Android (22/5.1.1; 480dpi; 1080x1920; nubia; NX529Jq; NX529Jq; qcom; ru_RU; 148324051)
   os:
     name: Android
     version: 5.1.1
@@ -5773,8 +5768,7 @@
   os_family: Android
   browser_family: Unknown
 -
-  user_agent: Mozilla/5.0 (Linux; Android 5.1.1; V210101 Build/LMY47V) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/39.0.0.0 Mobile Safari/537.36 Instagram 94.0.0.22.116 Android (22/5.1.1; 480dpi; 1080x1920; vargo; V21010
-  1; V210101; qcom; ru_RU; 155374064)
+  user_agent: Mozilla/5.0 (Linux; Android 5.1.1; V210101 Build/LMY47V) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/39.0.0.0 Mobile Safari/537.36 Instagram 94.0.0.22.116 Android (22/5.1.1; 480dpi; 1080x1920; vargo; V210101; V210101; qcom; ru_RU; 155374064)
   os:
     name: Android
     version: 5.1.1
@@ -5807,3 +5801,21 @@
     model: Ukozi U5
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 6.0; LEAGOO Z5c Build/NMF26F) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/76.0.3809.111 Mobile Safari/537.36 AlohaBrowser/2.10.0.2
+  os:
+    name: Android
+    version: "6.0"
+    platform: ""
+  client:
+    type: browser
+    name: Aloha Browser
+    version: 2.10.0.2
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Leagoo
+    model: Z5c
+  os_family: Android
+  browser_family: Unknown
