feat(alias-device) update detect fixtures

--- a/Tests/Parser/fixtures/alias_devices.yml
+++ b/Tests/Parser/fixtures/alias_devices.yml
@@ -2,7 +2,6 @@
 - user_agent: Mozilla/5.0 (Linux; U; Android 8.1.0; zh-cn; PBCT10 Build/OPM1.171019.011) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/57.0.2987.132 MQQBrowser/8.9 Mobile
   alias:
     name: PBCT10
-
 - user_agent: Mozilla/5.0 (Linux; Android 6.0.1; SM-G532G Build/MMB29T) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/64.0.3282.137 Mobile Safari/537.36
   alias:
     name: SM-G532G
@@ -158,3 +157,11 @@
 - user_agent: Mozilla/5.0 Linux; U; Android 6.0.1; B504_Unit Build/JOP24G AppleWebKit/534.30 KHTML, like Gecko Version/4.0 Chrome/43.0.2357.65 Mobile Safari/534.30
   alias:
     name: B504_Unit
+
+- user_agent: Mozilla/5.0 (Linux; Android 4.3; zh-cn; SAMSUNG-SM-N9008V_TD Release/11.15.2013 Browser/AppleWebKit537.36 Build/JSS15J) AppleWebKit/537.36 (KHTML, like Gecko) Version/1.5 Mobile Safari/537.36
+  alias:
+    name: SAMSUNG-SM-N9008V_TD
+
+- user_agent: Mozilla/5.0 (Mobile; Windows Phone 8.1; Android 4.0; ARM; Trident/7.0; Touch; rv:11.0; IEMobile/11.0; HISENSE; E260T+) like iPhone OS 7_0_3 Mac OS X AppleWebKit/537 (KHTML, like Gecko) Mobile Safari/537
+  alias:
+    name: E260T+
