--- a/regexes/alias_devices.yml
+++ b/regexes/alias_devices.yml
@@ -1,4 +1,3 @@
-
 # Dalvik
 - regex: '^Dalvik/[\d\.]+ \(Linux; U;\s?Android\s?(?:[\d\.]+;)\s?(.+) (?:Build|MIUI)/(?:.+)\)'
   name: '$1'
@@ -34,14 +33,19 @@
 - regex: 'CFNetwork/.+Darwin/.+(?:\(x86_64\))?\s+\(([^)]+)\)$'
   name: '$1'
 
+- regex: 'IEMobile/[0-9].+;(?:[^;]+); (.+)\) like'
+  name: '$1'
+
 # Android AppleWebKit
 - regex: 'Android\s+(?:[^;]+);\s+(?:[a-z]{2}(?:[_-][a-z]{2})?;)\s+([^;]+); Android/'
+  name: '$1'
+- regex: 'Android (?:[\d\.]+;)\s?(?:[^;]+;)?\s?(.+) Release/.+AppleWebKit.+Build/'
   name: '$1'
 - regex: 'Android (?:[\d\.]+;)\s?(?:[^;]+;)?\s?(.+) Build/.+AppleWebKit'
   name: '$1'
 - regex: 'Android (?:[\d\.]+;)\s?(?:[a-z]{2}(?:[_-][a-z]{2})?;)?\s?([^;]+);? Build/'
   name: '$1'
-- regex: 'Android (?:[\d.]+;)\s?(?:[^;]+;)?\s?(.+)\) AppleWebKit'
+- regex: 'Android (?:[\d.]+;)\s?(?:[^;]+;)?\s?(.+)\) (?:AppleWebKit|ShieldExperience)'
   name: '$1'
 - regex: 'Android (?:[\d.]+;)\s?(?:[^;]+;)?\s?(.+) AppleWebKit'
   name: '$1'
