feat(device) detect new brand Elekta models: ELED 43" Smart, ELED 43" Smart, ELED 50" Smart UHD, ELED 55" CV Smart UHD feat(device) detect new tv brands: AKIRA, Hi, Kvant

--- a/regexes/device/televisions.yml
+++ b/regexes/device/televisions.yml
@@ -775,3 +775,21 @@ Starwind:
   regex: 'Starwind Shell'
   device: 'tv'
   model: ''
+
+# Kvant (tvkvant.ru)
+Kvant:
+  regex: 'Kvant Shell'
+  device: 'tv'
+  model: ''
+
+# Hi
+Hi:
+  regex: 'Hi Shell'
+  device: 'tv'
+  model: ''
+
+# AKIRA (myakira.com)
+AKIRA:
+  regex: 'AKIRA Shell'
+  device: 'tv'
+  model: ''
