feat(device) device set model name for brands: Mystery, Telefunken, AKIRA

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -22884,10 +22884,14 @@ Vargo:
 
 # Elekta (elektagulf.com)
 Elekta:
-  regex: 'ELED-(?:43S[AM]{2}RT|5[05](?:CV_)?SMART_UHD)(?:[);/ ]|$)'
+  regex: 'ELED-(?:4[238]S[AM]{2}RT|5[05](?:CV_)?SMART_UHD|32SMART)(?:[);/ ]|$)'
   device: 'tv'
   models:
-    - regex: 'ELED-(43)S[AM]{2}RT(?:[);/ ]|$)'
-      model: 'ELED $1" Smart'
-    - regex: 'ELED-(5[05])(CV_)?SMART_UHD'
-      model: 'ELED $1" $2Smart UHD'
+    - regex: 'ELED-(4[238])S[AM]{2}RT(?:[);/ ]|$)'
+      model: '$1" FHD LED Smart TV'
+    - regex: 'ELED-55CV_SMART_UHD(?:[);/ ]|$)'
+      model: '55" UHD Curved LED Smart TV'
+    - regex: 'ELED-(50)SMART_UHD(?:[);/ ]|$)'
+      model: '$1" UHD LED Smart TV'
+    - regex: 'ELED-(32)SMART(?:[);/ ]|$)'
+      model: '$1" HD LED Smart TV'
