--- a/regexes/device/televisions.yml
+++ b/regexes/device/televisions.yml
@@ -622,7 +622,11 @@ Techwood:
 Telefunken:
   regex: 'Telefunken'
   device: 'tv'
-  model: ''
+  models:
+    - regex: 'Telefunken Shell [0-9]+D([0-9]{2})([1-9])[A-Z]H[0-9]+_HD'
+      model: '$1.$2" HD Smart TV'
+    - regex: 'Telefunken Shell [0-9]+D([0-9]{2})0[A-Z]F[0-9]+_FHD'
+      model: '$1" FHD Smart TV'
 
 # TCL
 TCL:
@@ -762,7 +766,11 @@ AMCV:
 Mystery:
   regex: 'Mystery Shell'
   device: 'tv'
-  model: ''
+  models:
+    - regex: 'Mystery Shell [0-9]+D([0-9]{2})([1-9])[A-Z]H[0-9]+_HD'
+      model: '$1.$2" HD Smart TV'
+    - regex: 'Mystery Shell [0-9]+D([0-9]{2})0[A-Z]F[0-9]+_FHD'
+      model: '$1" FHD Smart TV'
 
 # ECON (econ.su)
 ECON:
@@ -792,4 +800,6 @@ Hi:
 AKIRA:
   regex: 'AKIRA Shell'
   device: 'tv'
-  model: ''
+  models:
+    - regex: 'AKIRA Shell [A-Z]{2}([0-9]{2})0[A-Z]{2}'
+      model: '$1" Smart TV'
