feat(device) detect new brands Loview, Yuno, YASIN

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -22895,3 +22895,9 @@ Elekta:
       model: '$1" UHD LED Smart TV'
     - regex: 'ELED-(32)SMART(?:[);/ ]|$)'
       model: '$1" HD LED Smart TV'
+
+# YASIN (yasintv.kz)
+YASIN:
+  regex: 'YASIN Android TV(?:[);/ ]|$)'
+  device: 'tv'
+  model: ''
