--- a/Tests/fixtures/tv-1.yml
+++ b/Tests/fixtures/tv-1.yml
@@ -754,7 +754,7 @@
   device:
     type: tv
     brand: Mystery
-    model: 42" FHD Smart TV
+    model: ""
   os_family: Android
   browser_family: Android Browser
 -
@@ -772,7 +772,7 @@
   device:
     type: tv
     brand: Mystery
-    model: 31.5" HD Smart TV
+    model: ""
   os_family: Android
   browser_family: Android Browser
 -
@@ -916,7 +916,7 @@
   device:
     type: tv
     brand: Telefunken
-    model: 48" FHD Smart TV
+    model: ""
   os_family: Android
   browser_family: Chrome
 -
@@ -1024,7 +1024,7 @@
   device:
     type: tv
     brand: AKIRA
-    model: 43" Smart TV
+    model: ""
   os_family: Android
   browser_family: Chrome
 -
@@ -1042,7 +1042,7 @@
   device:
     type: tv
     brand: AKIRA
-    model: 39" Smart TV
+    model: ""
   os_family: Android
   browser_family: Chrome
 -
@@ -1402,7 +1402,7 @@
   device:
     type: tv
     brand: Telefunken
-    model: 31.5" HD Smart TV
+    model: ""
   os_family: Android
   browser_family: Android Browser
 -
@@ -1420,7 +1420,7 @@
   device:
     type: tv
     brand: Telefunken
-    model: 31.5" HD Smart TV
+    model: ""
   os_family: Android
   browser_family: Chrome
 -
@@ -1438,7 +1438,7 @@
   device:
     type: tv
     brand: Telefunken
-    model: 31.5" HD Smart TV
+    model: ""
   os_family: Android
   browser_family: Chrome
 -
@@ -1456,7 +1456,7 @@
   device:
     type: tv
     brand: Telefunken
-    model: 42" FHD Smart TV
+    model: ""
   os_family: Android
   browser_family: Chrome
 -
@@ -1474,7 +1474,7 @@
   device:
     type: tv
     brand: Telefunken
-    model: 48" FHD Smart TV
+    model: ""
   os_family: Android
   browser_family: Chrome
 -
@@ -1492,7 +1492,7 @@
   device:
     type: tv
     brand: Telefunken
-    model: 31.5" HD Smart TV
+    model: ""
   os_family: Android
   browser_family: Unknown
 -
@@ -1510,7 +1510,7 @@
   device:
     type: tv
     brand: Mystery
-    model: 31.5" HD Smart TV
+    model: ""
   os_family: Android
   browser_family: Opera
 -
@@ -1528,6 +1528,366 @@
   device:
     type: tv
     brand: Mystery
-    model: 31.5" HD Smart TV
+    model: ""
   os_family: Android
   browser_family: Opera
+-
+  user_agent: Mozilla/5.0 (Linux; Android 4.4.4; Mystery Shell T430HVN01_FHD) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/76.0.3809.132 Safari/537.36
+  os:
+    name: Android
+    version: 4.4.4
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 76.0.3809.132
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: Mystery
+    model: ""
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 4.4.4; Mystery Shell 536S236CH51_HD) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/79.0.3945.116 Safari/537.36
+  os:
+    name: Android
+    version: 4.4.4
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 79.0.3945.116
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: Mystery
+    model: ""
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 4.4.4; Mystery Shell 536D500CF51_FHD) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/70.0.3538.102 YaBrowser/18.11.1.1011.01 Safari/537.36
+  os:
+    name: Android
+    version: 4.4.4
+    platform: ""
+  client:
+    type: browser
+    name: Yandex Browser
+    version: 18.11.1.1011.01
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: Mystery
+    model: ""
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 4.4.4; Mystery Shell 536D480XF31_FHD Build/KTU84P) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/74.0.3729.157 Safari/537.36 OPR/53.0.2569.141117
+  os:
+    name: Android
+    version: 4.4.4
+    platform: ""
+  client:
+    type: browser
+    name: Opera
+    version: 53.0.2569.141117
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: Mystery
+    model: ""
+  os_family: Android
+  browser_family: Opera
+-
+  user_agent: Mozilla/5.0 (Linux; Android 4.4.4; Mystery Shell 536D430LF12_FHD) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/77.0.3865.92 Safari/537.36
+  os:
+    name: Android
+    version: 4.4.4
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 77.0.3865.92
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: Mystery
+    model: ""
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 4.4.4; Mystery Shell 536D420CF12_FHD) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/80.0.3987.87 Safari/537.36
+  os:
+    name: Android
+    version: 4.4.4
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 80.0.3987.87
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: Mystery
+    model: ""
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 4.4.4; Mystery Shell 536D400XF54_FHD) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/76.0.3809.132 Safari/537.36
+  os:
+    name: Android
+    version: 4.4.4
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 76.0.3809.132
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: Mystery
+    model: ""
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 4.4.4; Mystery Shell 536D400XF31_FHD Build/KTU84P) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/67.0.3396.87 Safari/537.36
+  os:
+    name: Android
+    version: 4.4.4
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 67.0.3396.87
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: Mystery
+    model: ""
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 4.4.4; JVC Shell 536D480XF61_FHD) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/76.0.3809.132 Safari/537.36 OPR/54.2.2672.49907
+  os:
+    name: Android
+    version: 4.4.4
+    platform: ""
+  client:
+    type: browser
+    name: Opera
+    version: 54.2.2672.49907
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: JVC
+    model: ""
+  os_family: Android
+  browser_family: Opera
+-
+  user_agent: Mozilla/5.0 (Linux; Android 4.4.4; JVC Shell 536D4306LF12_FHD Build/KTU84P) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/74.0.3729.157 Safari/537.36 OPR/53.1.2569.142848
+  os:
+    name: Android
+    version: 4.4.4
+    platform: ""
+  client:
+    type: browser
+    name: Opera
+    version: 53.1.2569.142848
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: JVC
+    model: ""
+  os_family: Android
+  browser_family: Opera
+-
+  user_agent: Mozilla/5.0 (Linux; Android 4.4.4; JVC Shell 536D4205CF1B_FHD Build/KTU84P) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/69.0.3497.100 Safari/537.36 OPR/48.2.2331.133274
+  os:
+    name: Android
+    version: 4.4.4
+    platform: ""
+  client:
+    type: browser
+    name: Opera
+    version: 48.2.2331.133274
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: JVC
+    model: ""
+  os_family: Android
+  browser_family: Opera
+-
+  user_agent: Mozilla/5.0 (Linux; Android 4.4.4; JVC Shell 536D400XF54_FHD Build/KTU84P) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/62.0.3202.94 YaBrowser/17.11.0.526.01 Safari/537.36
+  os:
+    name: Android
+    version: 4.4.4
+    platform: ""
+  client:
+    type: browser
+    name: Yandex Browser
+    version: 17.11.0.526.01
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: JVC
+    model: ""
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 4.4.4; JVC Shell 536D315XH33_HD Build/KTU84P) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/33.0.0.0 Safari/537.36 YandexSearch/7.16/apad
+  os:
+    name: Android
+    version: 4.4.4
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Webview
+    version: 33.0.0.0
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: JVC
+    model: ""
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 4.4.4; Loview Shell T320XVN02.G) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/71.0.3578.99 Safari/537.36
+  os:
+    name: Android
+    version: 4.4.4
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 71.0.3578.99
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: Loview
+    model: ""
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 4.4.4; Loview Shell HV320WHB_N85) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/77.0.3865.92 Safari/537.36
+  os:
+    name: Android
+    version: 4.4.4
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 77.0.3865.92
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: Loview
+    model: ""
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 4.4.4; ERISSON_shell_HV320FHB_N00_32DN6_HD_W18021) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/79.0.3945.116 Safari/537.36
+  os:
+    name: Android
+    version: 4.4.4
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 79.0.3945.116
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: Erisson
+    model: ""
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 4.4.4; ERISSON_shell_LSC320AN09_32DN6_HD_W18134) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/77.0.3865.116 Safari/537.36
+  os:
+    name: Android
+    version: 4.4.4
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 77.0.3865.116
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: Erisson
+    model: ""
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 4.4.4; Yuno Shell SmartTV) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/78.0.3904.90 Safari/537.36
+  os:
+    name: Android
+    version: 4.4.4
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 78.0.3904.90
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: Yuno
+    model: ""
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 8.0.0; LOVIEW Shell LSC320AN10 Build/OPR5.170623.014; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/61.0.3163.98 Safari/537.36
+  os:
+    name: Android
+    version: 8.0.0
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Webview
+    version: 61.0.3163.98
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: Loview
+    model: ""
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 4.4.4; YASIN Android TV) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/76.0.3809.111 Safari/537.36
+  os:
+    name: Android
+    version: 4.4.4
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 76.0.3809.111
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: YASIN
+    model: ""
+  os_family: Android
+  browser_family: Chrome
