--- a/regexes/device/televisions.yml
+++ b/regexes/device/televisions.yml
@@ -622,11 +622,7 @@ Techwood:
 Telefunken:
   regex: 'Telefunken'
   device: 'tv'
-  models:
-    - regex: 'Telefunken Shell [0-9]+D([0-9]{2})([1-9])[A-Z]H[0-9]+_HD'
-      model: '$1.$2" HD Smart TV'
-    - regex: 'Telefunken Shell [0-9]+D([0-9]{2})0[A-Z]F[0-9]+_FHD'
-      model: '$1" FHD Smart TV'
+  model: ''
 
 # TCL
 TCL:
@@ -766,11 +762,7 @@ AMCV:
 Mystery:
   regex: 'Mystery Shell'
   device: 'tv'
-  models:
-    - regex: 'Mystery Shell [0-9]+D([0-9]{2})([1-9])[A-Z]H[0-9]+_HD'
-      model: '$1.$2" HD Smart TV'
-    - regex: 'Mystery Shell [0-9]+D([0-9]{2})0[A-Z]F[0-9]+_FHD'
-      model: '$1" FHD Smart TV'
+  model: ''
 
 # ECON (econ.su)
 ECON:
@@ -800,6 +792,16 @@ Hi:
 AKIRA:
   regex: 'AKIRA Shell'
   device: 'tv'
-  models:
-    - regex: 'AKIRA Shell [A-Z]{2}([0-9]{2})0[A-Z]{2}'
-      model: '$1" Smart TV'
+  model: ''
+
+# Loview
+Loview:
+  regex: 'Loview Shell'
+  device: 'tv'
+  model: ''
+
+# Yuno (yuno.bbk.ru)
+Yuno:
+  regex: 'Yuno Shell'
+  device: 'tv'
+  model: ''
