Adds detection for WellKnownBot

--- a/Tests/fixtures/bots.yml
+++ b/Tests/fixtures/bots.yml
@@ -4222,3 +4222,9 @@
     producer:
         name: Global Digital Network Plus, LLC
         url: https://gdnplus.com/
+-
+  user_agent: WellKnownBot/0.1 (https://well-known.dev)
+  bot:
+    name: WellKnownBot
+    category: Crawler
+    url: https://well-known.dev
