--- a/regexes/bots.yml
+++ b/regexes/bots.yml
@@ -2447,6 +2447,11 @@
     name: 'Global Digital Network Plus, LLC'
     url: 'https://gdnplus.com/'
 
+- regex: 'WellKnownBot/([\d+\.])'
+  name: 'WellKnownBot'
+  category: 'Crawler'
+  url: 'https://well-known.dev'
+
 # Generic detections
 
 - regex: '[a-z0-9\-_]*((?<!cu|power[ _]|m[ _])bot(?![ _]TAB|[ _]?5[0-9])|crawler|crawl|checker|archiver|transcoder|spider)([^a-z]|$)'
