Adds detection for DIXON brand and DIXON XK1 3G

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -19283,6 +19283,15 @@ Divisat:
     - regex: '(J-Link)(?:[);/ ]|$)'
       model: '$1'
 
+# DIXON (https://www.cashcrusaders.co.za/)
+DIXON:
+  regex: 'DIXON_'
+  device: 'smartphone'
+  models:
+    - regex: 'DIXON_XK1_3G(?:[);/ ]|$)'
+      device: 'feature phone'
+      model: 'XK1 3G'
+
 # Kanji
 Kanji:
   regex: 'KJ-(OB03|YUBI)(?:[);/ ]|$)'
