--- a/Tests/fixtures/feature_phone.yml
+++ b/Tests/fixtures/feature_phone.yml
@@ -1429,3 +1429,21 @@
     model: M32433 3G
   os_family: Firefox OS
   browser_family: Firefox
+-
+  user_agent: Mozilla/5.0 (Mobile; DIXON_XK1_3G; rv:48.0) Gecko/48.0 Firefox/48.0 KAIOS/2.5.1.1
+  os:
+    name: KaiOS
+    version: 2.5.1.1
+    platform: ""
+  client:
+    type: browser
+    name: Firefox Mobile
+    version: "48.0"
+    engine: Gecko
+    engine_version: "48.0"
+  device:
+    type: feature phone
+    brand: DIXON
+    model: XK1 3G
+  os_family: Firefox OS
+  browser_family: Firefox
