Adds detection for Tecno Mobile Pouvoir 3 Air

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -15525,6 +15525,8 @@ Tecno Mobile:
       model: 'Camon 17'
     - regex: 'TECNO[ _]LD7j?(?:[);/ ]|$)'
       model: 'Pova'
+    - regex: 'TECNO[ _]LC6(?:[);/ ]|$)'
+      model: 'Pouvoir 3 Air'
     - regex: 'Tecno[ _](?:KC8|KC2j?)(?:[);/ ]|$)'
       model: 'Spark 4'
     - regex: 'Tecno[ _]KC6(?:[);/ ]|$)'
