Adds detection for Tecno Mobile Camon 11 Pro

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -15503,6 +15503,8 @@ Tecno Mobile:
       model: 'Camon i4'
     - regex: 'Tecno[ _]CF7(?:[);/ ]|$)'
       model: 'Camon 11'
+    - regex: 'Tecno[ _]CF8(?:[);/ ]|$)'
+      model: 'Camon 11 Pro'
     - regex: 'Tecno[ _]CC7(?:[);/ ]|$)'
       model: 'Camon 12'
     - regex: 'Tecno[ _](?:CC6|KC3)(?:[);/ ]|$)'
@@ -15525,8 +15527,6 @@ Tecno Mobile:
       model: 'Camon 17'
     - regex: 'TECNO[ _]LD7j?(?:[);/ ]|$)'
       model: 'Pova'
-    - regex: 'TECNO[ _]LC6(?:[);/ ]|$)'
-      model: 'Pouvoir 3 Air'
     - regex: 'Tecno[ _](?:KC8|KC2j?)(?:[);/ ]|$)'
       model: 'Spark 4'
     - regex: 'Tecno[ _]KC6(?:[);/ ]|$)'
@@ -15546,6 +15546,8 @@ Tecno Mobile:
     - regex: 'Tecno[ _]DP8D(?:[);/ ]|$)'
       model: 'DroidPad 8D'
       device: 'tablet'
+    - regex: 'TECNO[ _]LC6(?:[);/ ]|$)'
+      model: 'Pouvoir 3 Air'
     - regex: 'Tecno[ _]LB8a?'
       model: 'Pouvoir 3 Plus'
     - regex: 'Tecno[ _-]J8(?:[);/ ]|$)'
