Adds detection for Tecno Mobile Camon X

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -15523,6 +15523,8 @@ Tecno Mobile:
       model: 'Camon 16 SE'
     - regex: 'Tecno[ _-]CG6(?:[);/ ]|$)'
       model: 'Camon 17'
+    - regex: 'Tecno[ _-]CA7(?:[);/ ]|$)'
+      model: 'Camon X'
     - regex: 'TECNO[ _]F3(?:[);/ ]|$)'
       model: 'Pop 1'
     - regex: 'TECNO[ _]LD7j?(?:[);/ ]|$)'
