--- a/Tests/fixtures/smartphone-3.yml
+++ b/Tests/fixtures/smartphone-3.yml
@@ -9374,3 +9374,21 @@
     model: Pop 1
   os_family: Android
   browser_family: Opera
+- 
+  user_agent: Mozilla/5.0 (Linux; Android 8.1.0; TECNO CA7 Build/O11019) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/66.0.3359.126 Mobile Safari/537.36
+  os:
+    name: Android
+    version: 8.1.0
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 66.0.3359.126
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Tecno Mobile
+    model: Camon X
+  os_family: Android
+  browser_family: Chrome
