Adds detection for Tecno Mobile Pop 3

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -15527,6 +15527,8 @@ Tecno Mobile:
       model: 'Camon X'
     - regex: 'TECNO[ _]F3(?:[);/ ]|$)'
       model: 'Pop 1'
+    - regex: 'TECNO[ _]BB2(?:[);/ ]|$)'
+      model: 'Pop 3'
     - regex: 'TECNO[ _]LD7j?(?:[);/ ]|$)'
       model: 'Pova'
     - regex: 'Tecno[ _](?:KC8|KC2j?)(?:[);/ ]|$)'
