Adds detection for Tecno Mobile Pop 2 F

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -15527,6 +15527,8 @@ Tecno Mobile:
       model: 'Camon X'
     - regex: 'TECNO[ _]F3(?:[);/ ]|$)'
       model: 'Pop 1'
+    - regex: 'TECNO[ _]B1f(?:[);/ ]|$)'
+      model: 'Pop 2 F'
     - regex: 'TECNO[ _]BA2(?:[);/ ]|$)'
       model: 'Pop 2 Plus'
     - regex: 'TECNO[ _]BB2(?:[);/ ]|$)'
