Adds detection for Tecno Mobile W3 Pro

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -15560,6 +15560,8 @@ Tecno Mobile:
       model: 'Pouvoir 3 Plus'
     - regex: 'Tecno[ _-]J8(?:[);/ ]|$)'
       model: 'Boom J8'
+    - regex: 'Tecno[ _-]W3 Pro(?:[);/ ]|$)'
+      model: 'W3 Pro'
     - regex: 'Tecno[ _-]WX3P(?:[);/ ]|$)'
       model: 'WX3 Pro'
     - regex: 'TECNO S9'
