Adds detection for Tecno Mobile Pop 4 Air

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -15535,6 +15535,8 @@ Tecno Mobile:
       model: 'Pop 2 Plus'
     - regex: 'TECNO[ _]BB2(?:[);/ ]|$)'
       model: 'Pop 3'
+    - regex: 'TECNO[ _]BC1(?:[);/ ]|$)'
+      model: 'Pop 4 Air'
     - regex: 'TECNO[ _]LD7j?(?:[);/ ]|$)'
       model: 'Pova'
     - regex: 'Tecno[ _](?:KC8|KC2j?)(?:[);/ ]|$)'
